# codepath

./: .gitignore  CLAUDE.md  UPI.md  main.py  pyproject.toml
.claude/skills/format-problem-set/: SKILL.md
.zed/: settings.json
week-01/day-01/prob-set-01/: prob03.py  prob05.py
week-01/day-02/session-notes/: sample-umpire.py
week-01/tests/day-01/prob-set-01/: conftest.py  test_prob03.py
week-02/day-01/session-notes/: dictionaries.py  guided-problem-dicts.py
week-02/day-02/session-notes/: sets.py
week-03/day-01/prob-set-01/: prob01.py  prob02.py  prob03.py  problem-set.md
week-03/day-02/prob-set-02/: prob01.py  prob02.py  prob03.py  prob04.py  prob05.py  prob06.py  prob07.py  problem-set.md
week-04/day-01/prob-set-01/: prob02.py  prob03.py  prob04.py  prob05.py  prob06.py  prob07.py  prob08.py  problem-set.md
week-04/day-01/session-notes/: demo.py  ll_demo.py  oop_demo.py
week-04/day-02/prob-set-01/: prob02.py  problem-set.md
week-05/day-01/prob-set-01/: problem-set.md
week-05/day-01/prob-set-02/: problem-set.md
week-1/day-1/prob-set-1/: prob01.py  prob04.py  prob06.py
week-1/day-2/session-notes/: sample-umpire.py
week-1/prob-set-1/: prob01.py  prob02.py  prob03.py  prob04.py  prob05.py
week-1/tests/day-1/prob-set-1/: test_prob05.py  test_prob06.py
week-1/tests/prob-set-1/: conftest.py  test_prob04.py
week-2/day-1/prob-set-1/: prob02.py
