[project]
name = "codepath"
version = "0.1.0"
description = "codepath problem sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
]

[tool.basedpyright]
executionEnvironments = [
    { root = "week-1", extraPaths = ["week-1/day-1/prob-set-1", "week-1/day-1/prob-set-2"] },
]
