[project]
name = "codepath-tip102-summer-26"
version = "0.1.0"
description = "codepath tip 102 summer 2026 - problem sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
]

[tool.basedpyright]
executionEnvironments = [
    { root = "week-01", extraPaths = ["week-01/day-01/prob-set-01", "week-01/day-01/prob-set-02"] },
    { root = "week-02", extraPaths = ["week-02/day-01/prob-set-01", "week-02/day-01/prob-set-02"] },
    { root = "week-03", extraPaths = ["week-03/day-01/prob-set-01", "week-03/day-01/prob-set-02"] },
    { root = "week-04", extraPaths = ["week-04/day-01/prob-set-01", "week-04/day-01/prob-set-02"] },
    { root = "week-05", extraPaths = ["week-05/day-01/prob-set-01", "week-05/day-01/prob-set-02"] },
    { root = "week-06", extraPaths = ["week-06/day-01/prob-set-01", "week-06/day-01/prob-set-02"] },
    { root = "week-07", extraPaths = ["week-07/day-01/prob-set-01", "week-07/day-01/prob-set-02"] },
    { root = "week-08", extraPaths = ["week-08/day-01/prob-set-01", "week-08/day-01/prob-set-02"] },
    { root = "week-09", extraPaths = ["week-09/day-01/prob-set-01", "week-09/day-01/prob-set-02"] },
    { root = "week-10", extraPaths = ["week-10/day-01/prob-set-01", "week-10/day-01/prob-set-02"] },
    { root = "week-11", extraPaths = ["week-11/day-01/prob-set-01", "week-11/day-01/prob-set-02"] },
    { root = "week-12", extraPaths = ["week-12/day-01/prob-set-01", "week-12/day-01/prob-set-02"] },
]
